--- a/app/src/main/res/layout/epsodio_detalhes.xml
+++ b/app/src/main/res/layout/epsodio_detalhes.xml
@@ -5,21 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/colorButtonNormal"
-    android:visibility="gone"
     app:cardCornerRadius="3dp"
-    app:cardUseCompatPadding="true"
-    tools:visibility="visible">
+    app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="visible">
 
-
-
         <ImageView
             android:id="@+id/epsodio_detalhes_img"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:adjustViewBounds="true"
@@ -27,6 +23,7 @@
             android:scaleType="centerCrop"
             android:src="@drawable/poster_empty"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/layout_diretor_nome_visto"
             app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
@@ -156,16 +153,24 @@
             tools:text="78"
             tools:visibility="visible" />
 
+        <LinearLayout
+            android:id="@+id/wrapper_rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="22dp"
+            app:layout_constraintEnd_toStartOf="@+id/epsodio_detalhes_ler_mais"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divisor_two"
+            >
+
         <RatingBar
             android:id="@+id/epsodio_detalhes_progress"
             style="@style/CustomRatingBar"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:numStars="5"
-            android:layout_marginTop="22dp"
-            app:layout_constraintEnd_toStartOf="@+id/epsodio_detalhes_ler_mais"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divisor_two" />
+            android:layout_height="wrap_content"
+            android:numStars="5"/>
+
+        </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/epsodio_detalhes_ler_mais"
@@ -178,9 +183,9 @@
             android:layout_marginEnd="6dp"
             android:layout_marginTop="22dp"
             android:text="@string/view_more"
-            app:layout_constraintBottom_toBottomOf="@+id/epsodio_detalhes_progress"
+            app:layout_constraintBottom_toBottomOf="@+id/wrapper_rating"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/epsodio_detalhes_progress"
+            app:layout_constraintStart_toEndOf="@+id/wrapper_rating"
             app:layout_constraintTop_toBottomOf="@+id/divisor_two" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
